# corn-api

./: Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: build.yml  deploy.yml
src/: error.rs  main.rs
