[package]
name = "corn-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcorn = "0.9.0"
actix-web = "4.3.1"
actix-extensible-rate-limit = "0.2.1"

serde = "1.0.177"
serde_json = "1.0.104"
serde_yaml = "0.9.25"
toml = "0.7.6"

dotenv = "0.15.0"
env_logger = "0.10.0"